<resources>
    <string name="app_name">beep</string>
    <string name="action_settings">Settings</string>
    <string name="open_gl_error">Your device does not support Open GL ES2.</string>

    <string name="file_provider">xyz.peast.beep.fileprovider</string>

    <string name="login_email_label">Email</string>
    <string name="login_phone_label">Phone</string>

    // Headings
    <string name="label_top_beeps">Top Beeps</string>
    <string name="label_boards">Boards</string>

    <string name="content_authority" translatable="false">xyz.peast.beep</string>

    // Board Activity
    <string name="board_image_content_description">Image that represents this board</string>
    <string name="random_button_text">Random</string>
    <string name="no_beeps_yet_msg">No beeps yet. Record one!</string>
    <string name="change_board_image_msg">"Long press on image to change"</string>

    // Board Activity - Context Menu
    <string name="beep_context_menu_delete">Delete</string>
    <string name="beep_context_menu_edit">Edit - Not implemented</string>
    <string name="beep_context_menu_share">Share</string>

    // Create Board Activity
    <string name="dialog_new_board_name">Board name</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="need_read_permission">Need this permission to change photo</string>
    <string name="dialog_no_text_entered_error">Must enter a board name</string>
    <string name="no_board_name_entered_msg">You need to enter a board name</string>

    // Record Activity
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="next">Next</string>
    <string name="redo_recording">Redo</string>
    <string name="next_recording">Next</string>
    <string name="beep_image_content_description">Image that represents this beep</string>
    <string name="beep_image_edit_content_description">This is image that represents this beep. Click here to change</string>
    <string name="ad_content_description">This is an advertisement</string>

    <string name="need_external_permission">Need permission to read device image files</string>
    // Save Fragment
    <string name="save">Save</string>
    <string name="title_selection_textview">Beep Name</string>
    <string name="board_selection_textview">Board Name</string>
    <string name="delete_button_text">Delete</string>
    <string name="dialog_new_beep_name">Beep name</string>
    <string name="edittext_hint_text">Tap here</string>
    <string name="no_beep_name_entered_msg">You need to enter a beep name</string>
    <string name="camera_temp_photo_filename_prefix">temp_camera_image_</string>
    <string name="beep_image_intent_chooser_text">Select Source</string>
    <string name="create_new_board_spinner_item">Create New</string>
    <string name="beep_name_dialog_positive">OK</string>
    <string name="beep_name_dialog_negative">Cancel</string>


    // Share Fragment
    <string name="share">Share</string>
    <string name="no">Done</string>
    <string name="share_chooser_title">Share Your Beep</string>


    // Main Activity
    <string name="fab_record_beep_text">Record a Beep</string>
    <string name="fab_create_board_text">Create a Board</string>
    <string name="board_image_trans">board_image_transition</string>
    <string name="header_image_content_description">App header image</string>
    <string name="no_beeps_recorded_msg">No beeps recorded yet&#8230;</string>
    <string name="no_boards_created_msg">No boards created yet&#8230;</string>
    <string name="number_of_beeps_label">beeps</string>


    <string name="need_audio_permission">This app requires audio recording and playback</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    // Widget
    <string name="title_widget">Beep</string>

    // Dialog boxes
    <string name="dialog_positive_button">OK</string>
    <string name="dialog_negative_button">Cancel</string>

    // Edit Fragment
    <string name="chipmunk_fx_label">chipmunk</string>
    <string name="fastfwd_fx_label">fast fwd</string>
    <string name="helium_fx_label">helium</string>
    <string name="evil_fx_label">evil</string>
    <string name="slomo_fx_label">slomo</string>
    <string name="deep_fx_label">deep</string>
    <string name="echo_fx_label">Echo</string>
    <string name="church_fx_label">Church</string>
    <string name="otherreverbdelay_fx_label">*other*</string>
    <string name="reverse_fx_label">Reverse</string>
    <string name="robot_fx_label">Robot</string>
    <string name="otherfx_fx_label">-other-</string>


    <string name="bass_textview">Bass</string>
    <string name="treble_textview">Treble</string>
    <string name="back">Back</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


</resources>
