<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_record"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/image_title_board_linearlayout"
        android:layout_margin="8dp">
        <ImageView
            android:layout_width="@dimen/image_size_save_activity"
            android:layout_height="@dimen/image_size_save_activity"
            android:src="@drawable/beep_item_temp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:id="@+id/beep_imageview"
            android:scaleType="centerCrop"
            android:contentDescription="@string/beep_image_content_description"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_selection_textview"
                android:textSize="@dimen/save_fragment_label_size"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>
            <TextView
                android:id="@+id/beep_name_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_selection_textview"
                android:textSize="@dimen/save_fragment_label_size"
                android:layout_marginBottom="16dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/board_selection_textview"
                android:textSize="@dimen/save_fragment_label_size"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>
            <TextView
                android:id="@+id/board_name_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Brd name here"
                android:textSize="@dimen/save_fragment_label_size"/>
        </LinearLayout>


    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:text="Play"
        android:id="@+id/replay_button"
        android:layout_below="@+id/image_title_board_linearlayout"

        android:layout_marginBottom="16dp"
        android:drawableLeft="@drawable/ic_play_arrow_black_48dp"
        android:drawableStart="@drawable/ic_play_arrow_black_48dp"
        android:paddingLeft="@dimen/button_icon_padding_to_edge"
        android:paddingStart="@dimen/button_icon_padding_to_edge"
        android:paddingRight="@dimen/button_icon_padding_to_edge"
        android:paddingEnd="@dimen/button_icon_padding_to_edge"
        android:textSize="@dimen/button_text_size"
        android:textAllCaps="false"
        android:layout_centerHorizontal="true" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_frame_layout"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_below="@+id/replay_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <Button
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:id="@+id/facebook_button"
            android:text="facebook"
            android:textColor="@android:color/white"
            android:textSize="@dimen/button_text_size"
            android:background="@color/com_facebook_blue"
            android:visibility="visible"
            android:layout_weight="1"
            android:textAllCaps="false" />
        <Button
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:id="@+id/email_share_button"
            android:text="email"
            android:textColor="@android:color/white"
            android:textSize="@dimen/button_text_size"
            android:background="@color/email_share_button"
            android:visibility="visible"
            android:layout_weight="1"
            android:textAllCaps="false" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_frame_layout2"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_below="@+id/button_frame_layout"
        android:layout_marginTop="16dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <Button
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:id="@+id/facebook_messenger_button"
            android:text="fb messenger"
            android:textColor="@android:color/white"
            android:textSize="@dimen/button_text_size"
            android:background="@color/com_facebook_blue"
            android:visibility="visible"
            android:layout_weight="1"
            android:textAllCaps="false" />
        <Button
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:id="@+id/txtmsg_share_button"
            android:text="txt msg"
            android:textColor="@android:color/white"
            android:textSize="@dimen/button_text_size"
            android:background="@android:color/background_dark"
            android:visibility="visible"
            android:layout_weight="1"
            android:textAllCaps="false" />
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/no_button"
        android:text="@string/no"
        android:textColor="@android:color/white"
        android:textSize="@dimen/button_text_size"
        android:background="@color/recordButtonStopRecording"
        android:visibility="visible"

        android:textAllCaps="false"
        android:layout_below="@+id/button_frame_layout2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        android:contentDescription="@string/ad_content_description">
    </com.google.android.gms.ads.AdView>
</RelativeLayout>
